--- a/Css/style.css
+++ b/Css/style.css
@@ -14,6 +14,9 @@ body {
     background: #03a9f4;
     transition: 0.5s;
 }
+body.active {
+    background: #f43648;
+}
 .container {
     position: relative;
     width: 800px;
@@ -54,6 +57,7 @@ body {
     font-size: 16px;
     font-weight: 500;
     border: none;
+    border-radius: 5%;
 
 }
 .formAx {
@@ -69,4 +73,51 @@ body {
     align-items: center;
     box-shadow: 0 5px 45px rgba(0, 0, 0, 0.25);
     transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+.formAx.active {
+    left: 50%;
+}
+.formAx .form {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 50px;
+    transition: 0.5s;
+}
+.formAx .signinForm {
+    transition-delay: 0.25s;
+}
+.formAx.active .signinForm {
+    left: -100%;
+    transition-delay: 0s;
+}
+.formAx .form form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.formAx .form form h3 {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+.formAx .form form input {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    outline: none;
+    font-size: 16px;
+    border: 1px solid #333;
+}
+.formAx .form form input[type="submit"] {
+    background: #03a9f4;
+    border: none;
+    color: #fff;
+    max-width: 100px;
+    cursor: pointer;
+}
+.formAx .form form .forgot {
+    color: #333;
 }
