--- a/Css/style.css
+++ b/Css/style.css
@@ -127,8 +127,40 @@ body.active {
     cursor: pointer;
 }
 .formAx.active .signupForm input[type="submit"] {
-
+    background: #f43648;
 }
 .formAx .form form .forgot {
     color: #333;
+}
+@media (max-width: 991px) {
+    .container {
+        max-width: 400px;
+        height: 650px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .container .blueBg {
+        top: 0;
+        height: 100%;
+    }
+    .formAx {
+        width: 100%;
+        height: 500px;
+        top: 0;
+        box-shadow: navajowhite;
+    }
+    .blueBg .box {
+        position: absolute;
+        width: 100%;
+        height: 150px;
+        bottom: 0;
+    }
+    .box.signin {
+        top: 0;
+    }
+    .formAx.active{
+        left: 0;
+        top: 150px;
+    }
 }
